Run Test 4 on M3M4

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ ComplianceSpeedgoat.slx.r2024a
 Data/M6M5ID_Test1_actuation_uncompensated.mat
 Data/M6M5ID_Test2_actuation_compensated.mat
 Data/M6M5ID_Test3_both_compensated.mat
+Data/M2M3ID_Test4_actuation_uncompensated.mat
+ComplianceSpeedgoat.slxc
+ComplianceSpeedgoat.mldatx
