--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ComplianceSpeedgoat.slxc
 ComplianceSpeedgoat.mldatx
 Data/M2M3ID_Test5_actuation_compensated.mat
 *.slxc
+Data/M2M3ID_Test6_both_compensated.mat
